--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "react-redux-hooks-omdb",
+  "name": "react-redux-hooks",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "jest": "^25.1.0",
-    "jest-enzyme": "^7.1.2",
+    "moxios": "^0.4.0",
     "node-sass": "^4.13.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
